check/testdata/invalid-legacy-files/list_resource_with_sidebar_current.html.markdown
---
subcategory: "Example"
sidebar_current: "example_thing"
layout: "example"
page_title: "Example: example_thing"
description: |-
  Example description.
---
<!-- Copyright IBM Corp. 2019, 2026 -->
<!-- SPDX-License-Identifier: MPL-2.0 -->

# List Resource: example_thing

Byline.

## Example Usage

```terraform
list "example_thing" "example" {
  provider = example
}
```

## Argument Reference

* `name` - (Required) Name of thing.
